added docker configuration

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>aws-githubactions-docker</finalName>
     </build>
 
 </project>
